Social footer modif

--- a/index.html
+++ b/index.html
@@ -14,30 +14,59 @@
 
     <div id="intro" class="card text-center">
       <h1>Hello, I'm <span>Christian</span></h1>
-      <img id="avatar" class="img-circle" src="/profile/images/chris.png" alt="avatar">
+      <img id="avatar" class="img-circle" src="/images/chris.png" alt="avatar">
       <p>👋🏽 Hi, I’m Christian, Graphic Designer , coffee drinker, camera nerd, travel and tech enthusiast and outdoor lover.</p>
       <a href="https://lewagon.com/" target="_blank" class="btn-blue">Discover le Wagon</a>
     </div>
 
     <div class="card text-center">
       <h2>Follow me</h2>
-      <ul class="list-inline">
-        <li>
-          <a href="#">
-              <i class="fab fa-github-square"></i>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-              <i class="fab fa-linkedin"></i>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-              <i class="fab fa-twitter-square"></i>
-          </a>
-        </li>
-      </ul>
+      <div class="flex">
+        <div class="social">
+          <ul class="list-inline">
+            <li>
+              <a href="#">
+                  <i class="fab fa-github-square"></i>
+                  <p class="social-name">Github</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                  <i class="fab fa-linkedin"></i>
+                  <p class="social-name">LinkedIn</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                  <i class="fab fa-facebook-square"></i>
+                  <p class="social-name">Facebook</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                  <i class="fab fa-instagram"></i>
+                  <p class="social-name">Instagram</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                  <i class="fab fa-twitter-square"></i>
+                  <p class="social-name">Twitter</p>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+
+        <!-- <div class="links">
+          <ul class="list-inline">
+            <li><a href="#">Link1</a></li>
+            <li><a href="#">Link1</a></li>
+            <li><a href="#">Link1</a></li>
+          </ul>
+        </div> -->
+      </div>
+
     </div>
   </div>  
 
