fixing broken link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div id="intro" class="card text-center">
       <h1>Hello, I'm <span>Christian</span></h1>
-      <img id="avatar" class="img-circle" src="profile/images/chris.png" alt="avatar">
+      <img id="avatar" class="img-circle" src="/images/chris.png" alt="avatar">
       <p>👋🏽 Hi, I’m Christian, Graphic Designer , coffee drinker, camera nerd, travel and tech enthusiast and outdoor lover.</p>
       <a href="https://lewagon.com/" target="_blank" class="btn-blue">Discover le Wagon</a>
     </div>
