Added all social links in footer

--- a/index.html
+++ b/index.html
@@ -26,33 +26,33 @@
           <ul class="list-inline">
 
             <li class="socials">
-              <a href="#">
+              <a href="https://github.com/chrisgeek07">
                   <i class="fab fa-github-square"></i>
                   <p class="social-name">Github</p>
               </a>
             </li>
 
             <li class="socials">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/christianbeauxyeux/">
                   <i class="fab fa-linkedin"></i>
                   <p class="social-name">LinkedIn</p>
               </a>
             </li>
             
             <li class="socials">
-              <a href="#">
+              <a href="https://www.instagram.com/christianbdesign/">
                   <i class="fab fa-instagram"></i>
                   <p class="social-name">Instagram</p>
               </a>
             </li>
 
             <li class="socials">
-              <a href="#">
+              <a href="https://twitter.com/chrisgeek07">
                   <i class="fab fa-twitter-square"></i>
                   <p class="social-name">Twitter</p>
               </a>
             </li>
-            
+
           </ul>
         </div>
 
