Modified title and CTA button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="stylesheet" href="style.css">
-    <title>My profile</title>
+    <title>Christian Beaux-Yeux Portfolio</title>
 </head>
 <body>
 
@@ -16,7 +16,7 @@
       <h1>Hello, I'm <span>Christian</span></h1>
       <img id="avatar" class="img-circle" src="/images/chris.png" alt="avatar">
       <p>👋🏽 Hi, I’m Christian, Graphic Designer , coffee drinker, camera nerd, travel and tech enthusiast and outdoor lover.</p>
-      <a href="https://lewagon.com/" target="_blank" class="btn-blue">Discover le Wagon</a>
+      <a href="https://resume.io/r/HAbQQGy4q" target="_blank" class="btn-blue">View CV</a>
     </div>
 
     <div class="card text-center">
