Added new comments to html divs

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
       <h1>Hello, I'm <span>Christian</span></h1>
       <img id="avatar" class="img-circle" src="/images/chris.png" alt="avatar">
       <p>👋🏽 Hi, I’m Christian, Graphic Designer , coffee drinker, camera nerd, travel and tech enthusiast and outdoor lover.</p>
-      <a href="https://resume.io/r/HAbQQGy4q" target="_blank" class="btn-blue">View CV</a>
+      <a href="https://resume.io/r/HAbQQGy4q" target="_blank" class="btn-blue">View my CV</a>
     </div>
 
-    <div class="card text-center">
+    <div class="card text-center">  <!-- Beginning of social card -->
+
       <h2>Follow me</h2>
       <div class="flex">
         <div class="social">
@@ -55,13 +56,12 @@
 
           </ul>
         </div>
-
-
-
       </div>
 
-    </div>
-  </div>  
+    </div>  <!-- End of social card -->
+
+  
+  </div>  <!-- End of main container div -->
 
 </body>
 
