Added new cards to show my latest projects

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="stylesheet" href="style.css">
     <title>Christian Beaux-Yeux Portfolio</title>
 </head>
@@ -17,8 +17,42 @@
     <div id="intro" class="card text-center">
       <h1>Hello, I'm <span>Christian</span></h1>
       <img id="avatar" class="img-circle" src="/images/chris.png" alt="avatar">
-      <p>👋🏽 Hi, I’m Christian, Graphic Designer , coffee drinker, camera nerd, travel and tech enthusiast and outdoor lover.</p>
+      <p>👋🏽 Hi, I’m Christian, Graphic Designer | Web Developer, coffee drinker, camera nerd, travel and tech enthusiast and outdoor lover.</p>
       <a href="https://resume.io/r/HAbQQGy4q" target="_blank" class="btn-blue">View my CV</a>
+    </div>
+
+
+    <div class="card">
+      <h2 class="text-center">Latest Projects</h2>
+      
+      <div class="show-card-container">
+
+        <div class="show-card">
+          <h3>Rails Watch List</h3>
+          <div class="show-card-actions">
+            <a href="#" target="_blank" class="btn-blue-s">View</a>
+            <a href="#" target="_blank" class="btn-blue-s">View on Github</a>
+          </div>
+        </div>
+
+        <div class="show-card">
+          <h3>Rails Watch List</h3>
+          <div class="show-card-actions">
+            <a href="#" target="_blank" class="btn-blue-s">View</a>
+            <a href="#" target="_blank" class="btn-blue-s">View on Github</a>
+          </div>
+        </div>
+
+        <div class="show-card">
+          <h3>Rails Watch List</h3>
+          <div class="show-card-actions">
+            <a href="#" target="_blank" class="btn-blue-s">View</a>
+            <a href="#" target="_blank" class="btn-blue-s">View on Github</a>
+          </div>
+        </div>
+
+      </div>
+
     </div>
 
     <div class="card text-center">  <!-- Beginning of social card -->
@@ -62,7 +96,6 @@
 
     </div>  <!-- End of social card -->
 
-  
   </div>  <!-- End of main container div -->
 
 </body>
