Added project images screenshots

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       
       <div class="show-card-container">
 
-        <div class="show-card">
+        <div class="show-card one">
           <h3>Rails Watch List</h3>
           <div class="show-card-actions">
             <a href="#" target="_blank" class="btn-blue-s">View</a>
@@ -35,7 +35,7 @@
           </div>
         </div>
 
-        <div class="show-card">
+        <div class="show-card two">
           <h3>Rails Watch List</h3>
           <div class="show-card-actions">
             <a href="#" target="_blank" class="btn-blue-s">View</a>
@@ -43,7 +43,7 @@
           </div>
         </div>
 
-        <div class="show-card">
+        <div class="show-card three">
           <h3>Rails Watch List</h3>
           <div class="show-card-actions">
             <a href="#" target="_blank" class="btn-blue-s">View</a>
