Added all project images

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="show-card two">
-          <h3>Rails Watch List</h3>
+          <h3>Rent an Island</h3>
           <div class="show-card-actions">
             <a href="#" target="_blank" class="btn-blue-s">View</a>
             <a href="#" target="_blank" class="btn-blue-s">View on Github</a>
@@ -44,7 +44,7 @@
         </div>
 
         <div class="show-card three">
-          <h3>Rails Watch List</h3>
+          <h3>Easytrip - A Progressive Web App</h3>
           <div class="show-card-actions">
             <a href="#" target="_blank" class="btn-blue-s">View</a>
             <a href="#" target="_blank" class="btn-blue-s">View on Github</a>
