--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="show-card three">
-          <h3>Easytrip - A Progressive Web App</h3>
+          <h3>Easytrip - PWA</h3>
           <div class="show-card-actions">
             <a href="#" target="_blank" class="btn-blue-s">View</a>
             <a href="#" target="_blank" class="btn-blue-s">View on Github</a>
