--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="intro" class="card text-center">
       <h1>Hello, I'm <span>Christian</span></h1>
       <img id="avatar" class="img-circle" src="/images/chris.png" alt="avatar">
-      <p>👋🏽 Hi, I’m Christian, Graphic Designer | Web Developer, coffee drinker, camera nerd, travel and tech enthusiast and outdoor lover.
+      <p class="intro-txt">👋🏽 Hi, I’m Christian Beaux-Yeux, Graphic Designer | Web Developer, coffee drinker, camera nerd, travel and tech enthusiast and outdoor lover.
          Experienced Graphic Designer with a demonstrated history of working in the Graphic and the multimedia industry. Creative professional with a Bachelor of Arts (BA) focused in Graphic Design from the University of Technology, Mauritius. Also recently finished a 9 week  intensive Full Stack Web Development Bootcamp at Le Wagon.
       </p>
       <a href="https://resume.io/r/HAbQQGy4q" target="_blank" class="btn-blue">View my CV</a>
@@ -65,28 +65,28 @@
           <ul class="list-inline">
 
             <li class="socials">
-              <a href="https://github.com/chrisgeek07">
+              <a href="https://github.com/chrisgeek07" target="_blank">
                   <i class="fab fa-github-square"></i>
                   <p class="social-name">Github</p>
               </a>
             </li>
 
             <li class="socials">
-              <a href="https://www.linkedin.com/in/christianbeauxyeux/">
+              <a href="https://www.linkedin.com/in/christianbeauxyeux/" target="_blank">
                   <i class="fab fa-linkedin"></i>
                   <p class="social-name">LinkedIn</p>
               </a>
             </li>
             
             <li class="socials">
-              <a href="https://www.instagram.com/christianbdesign/">
+              <a href="https://www.instagram.com/christianbdesign/" target="_blank">
                   <i class="fab fa-instagram"></i>
                   <p class="social-name">Instagram</p>
               </a>
             </li>
 
             <li class="socials">
-              <a href="https://twitter.com/chrisgeek07">
+              <a href="https://twitter.com/chrisgeek07" target="_blank">
                   <i class="fab fa-twitter-square"></i>
                   <p class="social-name">Twitter</p>
               </a>
