Added hover effects on show card actions btns

--- a/index.html
+++ b/index.html
@@ -32,24 +32,24 @@
         <div class="show-card one">
           <h3>Rails Watch List</h3>
           <div class="show-card-actions">
-            <a href="https://rail-my-watch-list-7051.herokuapp.com/" target="_blank" class="btn-blue-s">View</a>
-            <a href="https://github.com/chrisgeek07/rails-watch-list" target="_blank" class="btn-blue-s">View on Github</a>
+            <a href="https://rail-my-watch-list-7051.herokuapp.com/" target="_blank" class="btn-blue-card">View</a>
+            <a href="https://github.com/chrisgeek07/rails-watch-list" target="_blank" class="btn-blue-card">View on Github</a>
           </div>
         </div>
 
         <div class="show-card two">
           <h3>Rent an Island</h3>
           <div class="show-card-actions">
-            <a href="https://rent-an-island.herokuapp.com/" target="_blank" class="btn-blue-s">View</a>
-            <a href="https://github.com/chrisgeek07/rent-an-island" target="_blank" class="btn-blue-s">View on Github</a>
+            <a href="https://rent-an-island.herokuapp.com/" target="_blank" class="btn-blue-card">View</a>
+            <a href="https://github.com/chrisgeek07/rent-an-island" target="_blank" class="btn-blue-card">View on Github</a>
           </div>
         </div>
 
         <div class="show-card three">
           <h3>Easytrip - PWA</h3>
           <div class="show-card-actions">
-            <a href="http://www.easytrip.tours/" target="_blank" class="btn-blue-s">View</a>
-            <a href="https://github.com/chrisgeek07/easy-trip" target="_blank" class="btn-blue-s">View on Github</a>
+            <a href="http://www.easytrip.tours/" target="_blank" class="btn-blue-card">View</a>
+            <a href="https://github.com/chrisgeek07/easy-trip" target="_blank" class="btn-blue-card">View on Github</a>
           </div>
         </div>
 
