--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
     <div class="card">
-      <h2 class="text-center">Latest Projects</h2>
+      <h2 class="head-proj text-center">My latest <span>Projects</span></h2>
       
       <div class="show-card-container">
 
