Made general adjustments where needed to make it responsive

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="show-card one">
           <h3>Rails Watch List</h3>
           <div class="show-card-actions">
-            <a href="https://rail-my-watch-list-7051.herokuapp.com/" target="_blank" class="btn-blue-card">View</a>
-            <a href="https://github.com/chrisgeek07/rails-watch-list" target="_blank" class="btn-blue-card">View on Github</a>
+            <a href="https://rail-my-watch-list-7051.herokuapp.com/" target="_blank" class="btn-blue-card mr-2">View</a>
+            <a href="https://github.com/chrisgeek07/rails-watch-list" target="_blank" class="btn-blue-card">Github Repo</a>
           </div>
         </div>
 
@@ -41,7 +41,7 @@
           <h3>Rent an Island</h3>
           <div class="show-card-actions">
             <a href="https://rent-an-island.herokuapp.com/" target="_blank" class="btn-blue-card">View</a>
-            <a href="https://github.com/chrisgeek07/rent-an-island" target="_blank" class="btn-blue-card">View on Github</a>
+            <a href="https://github.com/chrisgeek07/rent-an-island" target="_blank" class="btn-blue-card">Github Repo</a>
           </div>
         </div>
 
@@ -49,7 +49,7 @@
           <h3>Easytrip - PWA</h3>
           <div class="show-card-actions">
             <a href="http://www.easytrip.tours/" target="_blank" class="btn-blue-card">View</a>
-            <a href="https://github.com/chrisgeek07/easy-trip" target="_blank" class="btn-blue-card">View on Github</a>
+            <a href="https://github.com/chrisgeek07/easy-trip" target="_blank" class="btn-blue-card">Github Repo</a>
           </div>
         </div>
 
@@ -57,9 +57,9 @@
 
     </div>
 
-    <div class="card text-center">  <!-- Beginning of social card -->
+    <div class="card social text-center">  <!-- Beginning of social card -->
 
-      <h2>Follow me</h2>
+      <h2>Follow me on social</h2>
       <div class="flex">
         <div class="social">
           <ul class="list-inline">
