--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="stylesheet" href="style.css">
     <title>Christian Beaux-Yeux Portfolio</title>
@@ -16,7 +16,7 @@
 
     <div id="intro" class="card text-center">
       <h1>Hello, I'm <span>Christian</span></h1>
-      <img id="avatar" class="img-circle" src="/images/chris.png" alt="avatar">
+      <img id="avatar" class="img-circle" src="images/chris.png" alt="avatar">
       <p>👋🏽 Hi, I’m Christian, Graphic Designer | Web Developer, coffee drinker, camera nerd, travel and tech enthusiast and outdoor lover.</p>
       <a href="https://resume.io/r/HAbQQGy4q" target="_blank" class="btn-blue">View my CV</a>
     </div>
