--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 
   </div>  <!-- End of main container div -->
 
+
+  <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
 </body>
 
 </html>
