--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 
 
   <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
