--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container">
 
     <div id="intro" class="card text-center">
-      <h1>Hello, I'm <span>Christian</span></h1>
+      <h1 class="main-header">Hello, I'm <span>Christian</span></h1>
       <img id="avatar" class="img-circle" src="images/chris.png" alt="avatar">
       <p class="intro-txt">👋🏽 Hi, I’m Christian Beaux-Yeux, Graphic Designer | Web Developer, coffee drinker, camera nerd, travel and tech enthusiast and outdoor lover.
          Experienced Graphic Designer with a demonstrated history of working in the Graphic and the multimedia industry. Creative professional with a Bachelor of Arts (BA) focused in Graphic Design from the University of Technology, Mauritius. Also recently finished a 9 week  intensive Full Stack Web Development Bootcamp at Le Wagon.
