--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     <div id="intro" class="card text-center">
       <h1 class="main-header">Hello, I'm <span>Christian</span></h1>
-      <img id="avatar" class="img-circle" src="images/chris.png" alt="avatar">
-      <p class="intro-txt">👋🏽 Hi, I’m Christian Beaux-Yeux, Graphic Designer | Web Developer, coffee drinker, camera nerd, travel and tech enthusiast and outdoor lover.
+      <img id="avatar" class="img-circle anim1" src="images/chris.png" alt="avatar">
+      <p class="intro-txt anim1">👋🏽 Hi, I’m Christian Beaux-Yeux, Graphic Designer | Web Developer, coffee drinker, camera nerd, travel and tech enthusiast and outdoor lover.
          Experienced Graphic Designer with a demonstrated history of working in the Graphic and the multimedia industry. Creative professional with a Bachelor of Arts (BA) focused in Graphic Design from the University of Technology, Mauritius. Also recently finished a 9 week  intensive Full Stack Web Development Bootcamp at Le Wagon.
       </p>
-      <a href="https://resume.io/r/HAbQQGy4q" target="_blank" class="btn-blue">View my CV</a>
+      <a href="https://resume.io/r/HAbQQGy4q" target="_blank" class="btn-blue anim1">View my CV</a>
     </div>
 
 
@@ -102,6 +102,7 @@
 
 
   <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
+  <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js"></script>
   <script src="index.js"></script>
 </body>
 
