Added contact card to HTML

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 
     </div>
 
+    <div class="contact-card">
+
+    </div>
+
     <div class="card social text-center">  <!-- Beginning of social card -->
 
       <h2>Follow me on social</h2>
