--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
     </div>
 
     <div class="contact-card">
-
+      <h3>If you're interested in working together, do get in touch.
+        I'd love to chat.
+      </h3>
+      <a href="#">Get in touch!</a>
     </div>
 
     <div class="card social text-center">  <!-- Beginning of social card -->
