Created basic styling for contact section

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     </div>
 
     <div class="contact-card">
-      <h3>If you're interested in working together, do get in touch.
+      <p class="contact-txt">If you're interested in working together, do get in touch. <br>
         I'd love to chat.
-      </h3>
-      <a href="#">Get in touch!</a>
+      </p>
+      <a href="#" target="_blank" class="contact-btn">Get in touch!</a>
     </div>
 
     <div class="card social text-center">  <!-- Beginning of social card -->
