Added mailto link in contact card

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <p class="contact-txt">If you're interested in working together, do get in touch. <br>
         I'd love to chat.
       </p>
-      <a href="#" target="_blank" class="contact-btn">Get in touch!</a>
+      <a href="mailto:gildweek@gmail.com" target="_blank" class="contact-btn">Get in touch!</a>
     </div>
 
     <div class="card social text-center">  <!-- Beginning of social card -->
