--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <div class="card social text-center">  <!-- Beginning of social card -->
 
-      <h2>Follow me on social</h2>
+      <h2>Follow me on <span>social</span></h2>
       <div class="flex">
         <div class="social">
           <ul class="list-inline">
